reattempting path name change

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -11,7 +11,7 @@ body {
     position: relative;
 }
 .background {
-    background: url('/images/JCD.jpg') center center fixed no-repeat;
+    background: url('./images/JCD.jpg') center center fixed no-repeat;
     background-size: cover;
     position: fixed;
     top: 0;
