--- a/css/styles.scss
+++ b/css/styles.scss
@@ -61,7 +61,7 @@
                 height: 16vh;
             }
             #grid-1 {
-                background-image: url('images/grill.jpg');
+                background-image: url('../images/grill.jpg');
                 background-position: center;
                 background-size: cover;
                 grid-column: 1;
@@ -69,7 +69,7 @@
                 border-radius: 20px 0 0 0;
             }
             #grid-2 {
-                background-image: url('images/banchan.jpg');
+                background-image: url('../images/banchan.jpg');
                 background-position: center;
                 background-size: cover;
                 grid-column: 1;
@@ -77,7 +77,7 @@
                 border-radius: 0 0 0 20px;
             }
             #grid-3 {
-                background-image: url('images/wrap.jpg');
+                background-image: url('../images/wrap.jpg');
                 background-position: center;
                 background-size: cover;
                 grid-column: 2;
@@ -85,7 +85,7 @@
                 border-radius: 0 20px 0 0;
             }
             #grid-4 {
-                background-image: url('images/kimchistew.jpg');
+                background-image: url('../images/kimchistew.jpg');
                 background-position: center;
                 background-size: cover;
                 grid-column: 2;
