changing footer styles

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -174,12 +174,12 @@ header {
 
 #footer {
     background-color: black;
-    padding: .5rem 1rem;
+    padding: 1.5rem 2rem;
     p {
         text-align: right;
         color: darkgrey;
-        font-size: 0.8rem;
-        line-height: 1.15rem;
+        font-size: 0.75rem;
+        line-height: 1.25rem;
         letter-spacing: .15px;
     }
 }  
