editing background values on scss

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,18 +14,6 @@ body {
   position: relative;
 }
 
-.background {
-  background: url("../images/JCD.jpg") center center fixed no-repeat;
-  background-size: cover;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -3;
-  filter: brightness(45%);
-}
-
 section {
   width: 100vw;
 }
@@ -208,6 +196,21 @@ h3 {
 
 body {
   font-family: "Ruda", sans-serif;
+}
+
+.background {
+  background: url("../images/JCD.jpg") center center fixed no-repeat;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -3;
+  filter: brightness(40%);
 }
 
 #first-section {
