--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,6 +1,20 @@
 @import './global';
 @import './variables';
 
+.background {
+    background: url('../images/JCD.jpg') center center fixed no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -3;
+    filter: brightness(40%);
+}
 #first-section {
     gap: 6rem;
     .store-name {
