responsive design: width 375

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -163,7 +163,7 @@ header {
 
 #footer {
     background-color: black;
-    padding: 1.5rem 2rem;
+    padding: 1rem 1.75rem 1.75rem 0;
     p {
         text-align: right;
         color: darkgrey;
