--- a/css/_global.scss
+++ b/css/_global.scss
@@ -66,7 +66,7 @@ header {
     top: 0;
     z-index: 100;
 
-    nav {
+    #nav-portrait {
         display: block;
         position: relative;
         top: calc((8vh - 24px) / 2);
@@ -158,6 +158,9 @@ header {
             opacity: 1;
             transform: scale(1);
         }
+    }
+    #nav-landscape {
+        display: none;
     }
 }
 
