--- a/css/styles.scss
+++ b/css/styles.scss
@@ -39,7 +39,6 @@
             width: 38vw;
             padding-left: 1rem;
             p {
-                font-weight: 100;
                 #holidays {
                     font-size: .65rem;
                     color: rgb(190, 190, 190);
@@ -116,6 +115,9 @@
         }
         #welcome-message {
             position: relative;
+            #yes-break {
+                display: none;
+            }
             .orange-font {
                 padding: 1.5rem 0;
                 font-size: 1.15rem;
@@ -151,6 +153,9 @@
                 background-color: rgb(255, 140, 0);
                 padding: .75rem;
                 border-radius: 15px;
+            }
+            #landscape-only {
+                display: none;
             }
         }
         .store-name {
@@ -269,6 +274,304 @@
             .store-name {
                 font-size: 1.5rem;
                 line-height: 2rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 540px) {
+    header {
+        nav {
+            #menu {
+                padding: 2rem 0;
+                li {
+                    padding: 1rem 0;
+                    font-size: 1.25rem;
+                }
+            }        
+        }
+    }
+    #first-section {
+        gap: 3.75rem;
+        .store-name {
+            padding-top: 2rem;
+        }
+        #double-down {
+            img {
+                width: 10vw;
+            }
+        }
+    }
+    #second-section {
+        #first-part {
+            .store-name {
+                padding: 1rem 0 2.5rem 0;
+            }
+            #images {
+                gap: .8rem;
+                .grid-item {
+                    width: 28vw;
+                }
+            }
+            #welcome-message {
+                .orange-font {
+                    font-size: .9rem;
+                    line-height: 1.5rem;
+                    padding: 1.25rem 0;
+                }
+                .gray-font {
+                    font-size: .8rem;
+                    line-height: 1.25rem;
+                    padding: 1rem 0;
+                }
+            }
+        }
+        #second-part {
+            #map {
+                iframe {
+                    width: 360px;
+                    height: 220px;
+                }
+                a {
+                    margin-top: 1.5rem;
+                    font-size: .85rem;
+                    padding: .65rem;
+                    border-radius: 10px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 912px) {
+    #first-section {
+        gap: 4.5rem;
+        .store-name {
+            padding-top: 2rem;
+        }
+        #store-info {
+            gap: 2rem;
+            .info {
+                width: 30vw;
+                padding-left: 2rem;
+                p {
+                    font-size: 1.25rem;
+                    #holidays {
+                        font-size: .75rem;
+                        line-height: .5rem;
+                    }
+                }
+            }
+            #address {
+                p {
+                    line-height: 2.25rem;
+                }
+            }
+            #open-hours {
+                gap: 1.25rem;
+                p {
+                    line-height: 1.65rem;
+                }
+            }
+        }
+        #double-down {
+            padding-top: 4rem;
+            img {
+                width: 10vw;
+            }
+        }
+    }
+    #second-section {
+        #first-part {
+            height: 92vh;
+            #images {
+                gap: 1.25rem;
+                .grid-item {
+                    width: 22vw;
+                }
+            }
+            #welcome-message {
+                .gray-font {
+                    padding: 1.5rem 0 0 0;
+                }
+            }
+        }
+        #second-part {
+            #map {
+                iframe {
+                    width: 65vw;
+                    height: 360px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (orientation: landscape) {
+    header {
+        background-color: rgba(255, 255, 255, 0.75);
+        border-bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        #nav-portrait {
+            display: none;
+        }
+        #nav-landscape {
+            display: block;
+            #menu-landscape {
+                a {
+                    display: inline-block;
+                    li {
+                        list-style-type: none;
+                        width: 15vw;
+                        font-size: 1.15rem;
+                        color: rgb(50, 50, 50);
+                    }
+                    #order-online {
+                        width: fit-content;
+                        padding: .35rem 1.75rem;
+                        border-radius: 12px;
+                        background-color: rgb(255, 140, 0);
+                        color: white;
+                        margin-left: 3rem;
+                    }
+                    li:hover {
+                        color: rgb(255, 140, 0);
+                        font-weight: 600;
+                        text-shadow: 1.5px 1.5px 4px rgb(255, 255, 255);
+                    }
+                    #order-online:hover {
+                        font-weight: 400;
+                        text-shadow: none;
+                        background-color: black;
+                        color: rgb(255, 140, 0);
+                    }
+                }
+            }
+        }
+    }
+    #first-section {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        gap: 0;
+        width: 74vw;
+        margin: 8vh auto 0 auto;
+        .store-name {
+            padding-top: 0;
+            font-size: 3rem;
+            line-height: 3.75rem;
+        }
+        #store-info {
+            flex-direction: column;
+            gap: 1.5rem;
+            .info {
+                width: 16vw;
+                height: 24vh;
+                padding-left: 3rem;
+            }
+            #address {
+                p {
+                    line-height: 2rem;
+                }
+            }
+        }
+        #double-down {
+            display: none;
+        }
+    }
+    #second-section {
+        #first-part {
+            gap: 1.75rem;
+            .store-name {
+                padding: 1rem 0 3rem 0;
+            }
+            #images {
+                .grid-item {
+                    width: 16vw;
+                }
+                #grid-1 {
+                    border-radius: 20px 0 0 20px;
+                }
+                #grid-2 {
+                    grid-column: 2;
+                    grid-row: 1;
+                    border-radius: 0;
+                }
+                #grid-3 {
+                    grid-column: 3;
+                    grid-row: 1;
+                    border-radius: 0;
+                }
+                #grid-4 {
+                    grid-column: 4;
+                    grid-row: 1;
+                    border-radius: 0 20px 20px 0;
+                }
+            }
+            #welcome-message {
+                #no-break {
+                    display: none;
+                }
+                #yes-break {
+                    display: block;
+                }
+                .orange-font {
+                    line-height: 1.5rem;
+                }
+            }
+        }
+        #second-part {
+            #map {
+                padding: 2rem;
+                flex-direction: row;
+                gap: 4rem;
+                align-items: center;
+                iframe {
+                    width: 42vw;
+                    height: 260px;
+                }
+                a {
+                    display: none;
+                }
+                #landscape-only {
+                    display: flex;
+                    gap: 2rem;
+                    background-color: rgba(0, 0, 0, 0.3);
+                    border-radius: 12px;
+                    padding: 1rem 2rem;
+                    #days {
+                        text-align: center;
+                        color: black;
+                        #blue {
+                            color: rgb(50, 50, 255);
+                        }
+                        #red {
+                            color: rgb(255, 30, 30);
+                        }
+                    }
+                    p {
+                        line-height: 2rem;
+                        color: white;
+                        text-align: left;
+                        #italic {
+                            font-style: italic;
+                        }
+                    }
+                }
+            }
+            .store-name {
+                padding-top: 6rem;
+                font-size: 1rem;
+                line-height: 1.5rem;
+            }
+            #white-background {
+                height: 120vh;
+                top: calc(100vh + 48vh);
+            }   
+            #footer {
+                padding: 1rem;
             }
         }
     }
