--- a/css/styles.scss
+++ b/css/styles.scss
@@ -279,7 +279,7 @@
     }
 }
 
-@media screen and (max-width: 540px) {
+@media screen and (min-width: 540px) {
     header {
         nav {
             #menu {
@@ -343,7 +343,7 @@
     }
 }
 
-@media screen and (max-width: 912px) {
+@media screen and (min-width: 912px) {
     #first-section {
         gap: 4.5rem;
         .store-name {
