fixing landscape design

--- a/css/_global.scss
+++ b/css/_global.scss
@@ -55,7 +55,7 @@ h1, p {
 }
 a {
     text-decoration: none;
-    color: white;
+    
 }
 header {
     height: 8vh;
@@ -173,5 +173,8 @@ header {
         font-size: 0.75rem;
         line-height: 1.25rem;
         letter-spacing: .15px;
+        a {
+            color: darkgrey;
+        }
     }
 }  
