--- a/css/styles.scss
+++ b/css/styles.scss
@@ -457,6 +457,7 @@
         justify-content: space-around;
         gap: 0;
         width: 74vw;
+        height: 84vh;
         margin: 8vh auto 0 auto;
         .store-name {
             padding-top: 0;
@@ -469,7 +470,7 @@
             .info {
                 width: 16vw;
                 height: 24vh;
-                padding-left: 3rem;
+                padding-left: 2.5rem;
             }
             #address {
                 p {
@@ -482,10 +483,17 @@
         }
     }
     #second-section {
+        height: 108vh;
+        width: 80vw;
+        margin: auto;
+        background-color: white;
+        border-radius: 30px 30px 0 0;
+        align-items: center;
         #first-part {
-            gap: 1.75rem;
+            gap: 0;
+            width: fit-content;
             .store-name {
-                padding: 1rem 0 3rem 0;
+                display: none;
             }
             #images {
                 .grid-item {
@@ -511,18 +519,34 @@
                 }
             }
             #welcome-message {
-                #no-break {
+                padding: 2rem 0;
+                #no-break, br {
                     display: none;
                 }
                 #yes-break {
                     display: block;
                 }
                 .orange-font {
+                    font-size: 1.25rem;
+                    line-height: 1.75rem;
+                    padding: 0;
+                }
+                hr {
+                    display: none;
+                }
+                .gray-font {
+                    font-size: 1rem;
                     line-height: 1.5rem;
+                    padding: .5rem;
+                    br {
+                        display: none;
+                    }
                 }
             }
         }
         #second-part {
+            width: fit-content;
+            margin-top: 0;
             #map {
                 padding: 2rem;
                 flex-direction: row;
@@ -531,6 +555,7 @@
                 iframe {
                     width: 42vw;
                     height: 260px;
+                    border-right: 1px solid black;
                 }
                 a {
                     display: none;
@@ -538,22 +563,21 @@
                 #landscape-only {
                     display: flex;
                     gap: 2rem;
-                    background-color: rgba(0, 0, 0, 0.3);
-                    border-radius: 12px;
                     padding: 1rem 2rem;
                     #days {
                         text-align: center;
-                        color: black;
+                        color: rgb(0, 0, 0);
+                        font-weight: 700;
                         #blue {
                             color: rgb(50, 50, 255);
                         }
                         #red {
-                            color: rgb(255, 30, 30);
+                            color: rgb(255, 35, 35);
                         }
                     }
                     p {
                         line-height: 2rem;
-                        color: white;
+                        color: rgb(105, 105, 105);
                         text-align: left;
                         #italic {
                             font-style: italic;
@@ -562,16 +586,21 @@
                 }
             }
             .store-name {
-                padding-top: 6rem;
-                font-size: 1rem;
-                line-height: 1.5rem;
+                display: none;
             }
             #white-background {
-                height: 120vh;
-                top: calc(100vh + 48vh);
+                display: none;
             }   
             #footer {
-                padding: 1rem;
+                width: 100vw;
+                padding: 2rem;
+                .white-font {
+                    color: white;
+                }
+                p {
+                    font-size: .85rem;
+                    line-height: 1.25rem;  
+                }
             }
         }
     }
