--- a/css/_global.scss
+++ b/css/_global.scss
@@ -3,6 +3,12 @@
     margin: 0;
     padding: 0;
 }
+html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
 body {
     background-color: black;
     text-align: center;
